fix: cors origins dynamic load

--- a/server/.env.template
+++ b/server/.env.template
@@ -3,3 +3,5 @@ JWT_SECRET="xxxxxxxxxx"
 CLOUDINARY_CLOUD_NAME="xxxxxxxxxx"
 CLOUDINARY_API_KEY="xxxxxxxxxxxxxx"
 CLOUDINARY_API_SECRET="xxxxxxxxxxxxxxxxx"
+ALLOWED_ORIGINS="https://boring-nextjs-ecommerce.vercel.app,http://localhost:3000"
+COOKIE_DOMAIN="https://boring-nextjs-ecommerce.vercel.app"
