refactor & new features

--- a/server/.env.template
+++ b/server/.env.template
@@ -1,7 +1,11 @@
 DATABASE_URL="postgresql://user:pass@ip_or_host:port/db_name"
 JWT_SECRET="xxxxxxxxxx"
+API_DOMAIN_URL="http://localhost:3001"
 CLOUDINARY_CLOUD_NAME="xxxxxxxxxx"
 CLOUDINARY_API_KEY="xxxxxxxxxxxxxx"
 CLOUDINARY_API_SECRET="xxxxxxxxxxxxxxxxx"
 ALLOWED_ORIGINS="https://boring-nextjs-ecommerce.vercel.app,http://localhost:3000"
-COOKIE_DOMAIN="https://boring-nextjs-ecommerce.vercel.app"
+GOOGLE_CLIENT_ID="xxxxxxxxxxxxxxxxxxx"
+GOOGLE_CLIENT_SECRET="Gxxxxxxxxxxxxxxxxxx"
+GOOGLE_REDIRECT_URI="http://localhost:3001/api/auth/callback/google"
+
