--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/src/server.js",
     "dev": "nodemon src/server.ts",
+    "typecheck": "tsc --noEmit",
     "build": "tsc && npm run after:build",
     "after:build": "run-s prisma:generate prisma:db-push prisma:seed",
     "prisma:generate": "prisma generate",
@@ -18,19 +19,21 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "npm-run-all": "^4.1.5",
+    "querystring": "^0.2.1",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -38,7 +41,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.14",
     "@types/multer": "^1.4.12",
